--- a/MyBot.Supporter.Main/MyBot.Supporter.Main.csproj
+++ b/MyBot.Supporter.Main/MyBot.Supporter.Main.csproj
@@ -18,7 +18,7 @@
     <PublishUrl>publish\</PublishUrl>
     <Install>false</Install>
     <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
