--- a/MyBot.Supporter.Main/MyBot.Supporter.Main.csproj
+++ b/MyBot.Supporter.Main/MyBot.Supporter.Main.csproj
@@ -140,29 +140,23 @@
     <Compile Include="FirstUse.Designer.cs">
       <DependentUpon>FirstUse.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="AddProfile.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="AddProfile.Designer.cs">
+      <DependentUpon>AddProfile.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form4.cs">
+    <Compile Include="SplashScreen.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form4.Designer.cs">
-      <DependentUpon>Form4.cs</DependentUpon>
+    <Compile Include="SplashScreen.Designer.cs">
+      <DependentUpon>SplashScreen.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form5.cs">
+    <Compile Include="GenerateProfile.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form5.Designer.cs">
-      <DependentUpon>Form5.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form6.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form6.Designer.cs">
-      <DependentUpon>Form6.cs</DependentUpon>
+    <Compile Include="GenerateProfile.Designer.cs">
+      <DependentUpon>GenerateProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="HttpToSocks5Proxy\Enums\AddressType.cs" />
     <Compile Include="HttpToSocks5Proxy\Enums\Authentication.cs" />
@@ -182,6 +176,12 @@
     <Compile Include="MyBotSetter.Designer.cs">
       <DependentUpon>MyBotSetter.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyBotUpdator.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyBotUpdator.Designer.cs">
+      <DependentUpon>MyBotUpdator.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -197,7 +197,7 @@
     </Compile>
     <Compile Include="TelegramBot.cs" />
     <EmbeddedResource Include="Characters.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Characters.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
@@ -215,23 +215,23 @@
     <EmbeddedResource Include="FirstUse.resx">
       <DependentUpon>FirstUse.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="AddProfile.resx">
+      <DependentUpon>AddProfile.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form4.resx">
-      <DependentUpon>Form4.cs</DependentUpon>
+    <EmbeddedResource Include="SplashScreen.resx">
+      <DependentUpon>SplashScreen.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form5.resx">
-      <DependentUpon>Form5.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form6.resx">
-      <DependentUpon>Form6.cs</DependentUpon>
+    <EmbeddedResource Include="GenerateProfile.resx">
+      <DependentUpon>GenerateProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainScreen.resx">
       <DependentUpon>MainScreen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyBotSetter.resx">
       <DependentUpon>MyBotSetter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyBotUpdator.resx">
+      <DependentUpon>MyBotUpdator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -248,16 +248,12 @@
     </None>
     <None Include="Bin\Debug\DLL.zip" />
     <None Include="packages.config" />
-    <None Include="Resources\Chinese_S.zip" />
     <None Include="Resources\ClanGames_config.zip" />
     <None Include="Resources\DLL.zip" />
     <None Include="Resources\Host.zip" />
-    <None Include="Resources\logo.png.3174c35ae4acfb86c7155cc06bb38c59.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\123456.ico" />
-    <None Include="Resources\ENText.txt" />
-    <None Include="Resources\CNText.txt" />
     <None Include="app.manifest" />
   </ItemGroup>
   <ItemGroup>
