Added auto download MyBot update and supported directly run MyBot au3 file without AutoIT installed

--- a/MyBot.Supporter.V2/MyBot.Supporter.V2.csproj
+++ b/MyBot.Supporter.V2/MyBot.Supporter.V2.csproj
@@ -6,6 +6,7 @@
     <UseWPF>true</UseWPF>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>123456.ico</ApplicationIcon>
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
@@ -23,6 +24,22 @@
     <Reference Include="OpenHardwareMonitorLib">
       <HintPath>..\Dlls\OpenHardwareMonitorLib.dll</HintPath>
     </Reference>
+    <Reference Include="System.IO.Compression" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resource.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resource.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resource.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
