--- a/MyBot.Supporter.V2/MyBot.Supporter.V2.csproj
+++ b/MyBot.Supporter.V2/MyBot.Supporter.V2.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="MaterialDesignThemes" Version="4.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Management" Version="4.7.0" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
   <ItemGroup>
